# nanobot-quant

./: .gitignore  Dockerfile  LICENSE  README.md  fix_ports.py  pyproject.toml
skills/neo/: SKILL.md
skills/quant/: SKILL.md
src/nanobot_quant/: __init__.py  aggregator.py  backtest_runner.py  event_bus.py  pipeline.py  signal.py  signal_schema.py
src/nanobot_quant/paper/: __init__.py  broker.py  runner.py
src/nanobot_quant/portfolio/: __init__.py  engine.py  order_schema.py
src/nanobot_quant/risk/: __init__.py  engine.py
src/nanobot_quant/skills/quant/: SKILL.md
src/nanobot_quant/strategies/: __init__.py  td_sequential.py  td_sequential_strategy.py
